5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4488/executions/1590_2895.log
== TEST (2019-04-01 14:20:47) 
-- CODE:
var = float(input( "quatidade" ))
total
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:43:58) 
-- CODE:
input(quantidade)
input(valor unitario)
input(frete)

-- ERROR:
File "XXXX", line 2
    input(valor unitario)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:43:58) 
-- CODE:
input(quantidade)
input(valor unitario)
input(frete)

-- ERROR:
File "XXXX", line 2
    input(valor unitario)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:43:58) 
-- CODE:
input(quantidade)
input(valor unitario)
input(frete)

-- EXECUTION TIME:
0.124766
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 2
    input(valor unitario)
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:20:06) 
-- CODE:
var1= float(input("quantidade"))
var2= float(input("valor unitario"))
var3=float(input("frete"))
var4=var1 *var2+var3
print(var4)
-- EXECUTION TIME:
0.196807
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
